--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit==1.37.1
-numpy==1.26.4
-pandas==2.2.2
-httpx==0.27.0
-python-dotenv==1.0.1
-scikit-learn
-joblib
+streamlit>=1.37
+pydantic==1.10.15
+numpy>=1.26
+pandas>=2.2
+httpx>=0.28
+python-dotenv>=1.0
+scikit-learn==1.5.1
+joblib>=1.3
