--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
-streamlit>=1.37
-pydantic==1.10.15
-numpy>=1.26
-pandas>=2.2
-httpx>=0.28
-python-dotenv>=1.0
-scikit-learn==1.5.1
-joblib>=1.3
+# Core app
+streamlit>=1.34,<2.0
+
+# Data stack
+pandas>=2.2,<3.0
+numpy>=1.26,<2.0
+scipy>=1.11,<2.0
+python-dateutil>=2.8.2,<3.0
+tzdata>=2023.3
+
+# HTTP / API
+httpx>=0.27,<0.28
+
+# ML (meta-labeling)
+scikit-learn>=1.5,<2.0
+
+# Schemas (мы используем Pydantic v1)
+pydantic>=1.10.13,<2.0
