--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,6 @@ httpx>=0.27,<0.28
 scikit-learn>=1.5,<2.0
 joblib>=1.3,<2.0
 
-# Schemas (используем Pydantic v1)
+# Schemas (мы используем Pydantic v1) — если понадобится
 pydantic>=1.10.13,<2.0
-
-# Env (для локальной разработки)
-python-dotenv>=1.0,<2.0
+matplotlib>=3.8,<4.0
